--- a/frase.css
+++ b/frase.css
@@ -7,6 +7,7 @@ h1 {
     text-align: center;
     background-image: url(img/fundo.png);
     background-size: cover;
+    background-repeat: no-repeat;
   }
 
   button {
